--- a/HideMessage_web/Views/Login/Index.cshtml
+++ b/HideMessage_web/Views/Login/Index.cshtml
@@ -1,28 +1,33 @@
 ﻿@{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = ViewBag.Title;
 }
+@model HideMessage_web.Models.User;
 
 <div class="page__hd">
     <h1 class="page__title">HideMes</h1>
     <p class="page__desc">HideMes 是一套仅针对短信发送的平台。此平台不接受注册。</p>
 </div>
-<div class="weui-cells weui-cells_form">
-    <div class="weui-cell">
-        <div class="weui-cell__hd"><label class="weui-label">账号</label></div>
-        <div class="weui-cell__bd">
-            <input class="weui-input" type="number" pattern="[0-9]*" placeholder="请输入账号"/>
+@using (Html.BeginForm("Index", "Login", FormMethod.Post, new { name = "login"}))
+{
+    <div class="weui-cells weui-cells_form">
+        <div class="weui-cell">
+            <div class="weui-cell__hd"><label class="weui-label">账号</label></div>
+            <div class="weui-cell__bd">
+			    @Html.TextBoxFor(m => m.user_account, null, new { @class= "weui-input", @placeholder= "请输入账号"})
+            </div>
+        </div>
+        <div class="weui-cell">
+            <div class="weui-cell__hd">
+                <label class="weui-label">密码</label>
+            </div>
+            <div class="weui-cell__bd">
+			    @Html.TextBoxFor(m => m.user_password, null, new { @class= "weui-input", @placeholder= "请输入密码", @type="password"})
+            </div>
         </div>
     </div>
-    <div class="weui-cell">
-        <div class="weui-cell__hd">
-            <label class="weui-label">密码</label>
-        </div>
-        <div class="weui-cell__bd">
-            <input class="weui-input" type="password" placeholder="请输入密码">
-        </div>
-    </div>
-</div>
+    <div class="weui-cells__tips page__error_color">@ViewBag.ErrMsg</div>
+}
 <div class="weui-cells__tips">* 若没有账号或遗忘账号密码，请与管理员联系。</div>
 <div class="page__bd_spacing">
-    <a href="javascript:;" class="weui-btn weui-btn_primary">登录</a>
+    <a href="javascript:document.login.submit();" class="weui-btn weui-btn_primary">登录</a>
 </div>
