--- a/HideMessage_web/Views/Home/Index.cshtml
+++ b/HideMessage_web/Views/Home/Index.cshtml
@@ -1,57 +1,55 @@
 ﻿@{
     ViewData["Title"] = ViewBag.Title;
 }
-
-<div class="weui-cells weui-cells_form">
-    <div class="weui-cell weui-cell_vcode">
-        <div class="weui-cell__hd">
-            <label class="weui-label">手机号</label>
-        </div>
-        <div class="weui-cell__bd">
-            <input class="weui-input" type="tel" placeholder="请输入手机号">
-        </div>
-        <div class="weui-cell__ft">
-            <a href="javascript:;" class="weui-vcode-btn">获取状态</a>
+@model HideMessage_web.Models.Messages;
+@using (Html.BeginForm("Index", "Home", FormMethod.Post, new { name = "send_request"}))
+{
+    <div class="weui-cells weui-cells_form">
+        <div class="weui-cell weui-cell_vcode">
+            <div class="weui-cell__hd">
+                <label class="weui-label">手机号</label>
+            </div>
+            <div class="weui-cell__bd">
+			    @Html.TextBoxFor(m => m.message_phone_number, null, new { @class= "weui-input", @type= "tel", @placeholder= "请输入手机号"})
+            </div>
+            <div class="weui-cell__ft">
+                <a href="javascript:document.send_request.submit();;" class="weui-vcode-btn">获取状态</a>
+            </div>
         </div>
     </div>
-</div>
+}
 
 <div class="weui-cells__title">历史信息</div>
 <div class="weui-cells">
-    <a class="weui-cell weui-cell_access" href="javascript:;">
-        <div class="weui-cell__bd">
-            <h4 class="weui-media-box__title">13750001622</h4>
-            <p class="weui-media-box__desc">2017-6-8 13:32:23</p>
-        </div>
-        <div class="weui-cell__ft">开机</div>
-    </a>
-    <a class="weui-cell weui-cell_access" href="javascript:;">
-        <div class="weui-cell__bd">
-            <h4 class="weui-media-box__title">13750001622</h4>
-            <p class="weui-media-box__desc">2017-6-8 13:32:23</p>
-        </div>
-        <div class="weui-cell__ft">等待反馈</div>
-    </a>
-    <a class="weui-cell weui-cell_access" href="javascript:;">
-        <div class="weui-cell__bd">
-            <h4 class="weui-media-box__title">13750001622</h4>
-            <p class="weui-media-box__desc">2017-6-8 13:32:23</p>
-        </div>
-        <div class="weui-cell__ft">未知状态</div>
-    </a>
-    <a class="weui-cell weui-cell_access" href="javascript:;">
-        <div class="weui-cell__bd">
-            <h4 class="weui-media-box__title">13750001622</h4>
-            <p class="weui-media-box__desc">2017-6-8 13:32:23</p>
-        </div>
-        <div class="weui-cell__ft">发送中</div>
-    </a>
-    <a class="weui-cell weui-cell_access" href="javascript:;">
-        <div class="weui-cell__bd">
-            <h4 class="weui-media-box__title">13750001622</h4>
-            <p class="weui-media-box__desc">2017-6-8 13:32:23</p>
-        </div>
-        <div class="weui-cell__ft">错误</div>
-    </a>
-    
+	@foreach (var message in ViewBag.Messages)
+        {
+            <a class="weui-cell weui-cell_access" href="javascript:;">
+                <div class="weui-cell__bd">
+                    <h4 class="weui-media-box__title">@message.message_phone_number</h4>
+                    <p class="weui-media-box__desc">@message.message_create_time</p>
+                </div>
+                <div class="weui-cell__ft">@message.phone_state</div>
+            </a>
+        }
 </div>
+
+@if (ViewBag.NeedAlertMessage) 
+{
+    <div id="alert_dialog">
+        <div class="weui-mask"></div>
+        <div class="weui-dialog">
+            <div class="weui-dialog__hd"><strong class="weui-dialog__title">请求</strong></div>
+            <div class="weui-dialog__bd">@ViewBag.AlertMessage</div>
+            <div class="weui-dialog__ft">
+                <a href="javascript:deleteDialog();" class="weui-dialog__btn weui-dialog__btn_primary">确定</a>
+            </div>
+        </div>
+    </div>
+}
+
+<script type="text/javascript">
+function deleteDialog(){
+  var dialog = document.getElementById("alert_dialog");
+  dialog.remove();
+}
+</script>
