--- a/HideMessage_web/Views/Shared/_Layout.cshtml
+++ b/HideMessage_web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.2/weui.css"/>
     <link rel="stylesheet" href="css/site.css"/>
+	<link rel="stylesheet" href="css/dropload.css">
 </head>
 <body>
     @RenderBody()
